// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Yarn Berry migration simple package with conditions (v8 format) 1`] = `
"{
  "lockfileVersion": 1,
  "workspaces": {
    "": {
      "name": "test-conditions",
      "dependencies": {
        "@esbuild/darwin-arm64": "^0.21.5",
        "fsevents": "^2.3.2",
      },
    },
  },
  "packages": {
    "@esbuild/darwin-arm64": ["@esbuild/darwin-arm64@0.21.5", "", { "os": "darwin", "cpu": "arm64" }, "sha512-DwqXqZyuk5AiWWf3UfLiRDJ5EDd49zg6O9wclZ7kUMv2WRFr4HKjXp/5t8JZ11QbQfUS6/cRCKGwYhtNAY88kQ=="],

    "fsevents": ["fsevents@2.3.2", "", { "os": "darwin" }, "sha512-xiqMQR4xAeHTuB9uWm+fFRcIOgKBMiOBP+eXiyT7jsgVCq1bkVygt00oASowB7EdtpOHaaPgKt812P9ab+DDKA=="],
  }
}
"
`;

exports[`Yarn Berry migration optional peer dependencies 1`] = `
"{
  "lockfileVersion": 1,
  "workspaces": {
    "": {
      "name": "test-peer-meta",
      "dependencies": {
        "react": "^18.0.0",
      },
    },
  },
  "packages": {
    "loose-envify": ["loose-envify@1.4.0", "", { "peerDependencies": { "typescript": "*" }, "optionalPeers": ["typescript"], "bin": { "loose-envify": "cli.js" } }, "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q=="],

    "react": ["react@18.2.0", "", { "dependencies": { "loose-envify": "^1.1.0" } }, "sha512-/3IjMdb2L9QbBdWiW5e3P2/npwMBaU9mHCSCUzNln0ZCYbcfTsGbTJrU/kGemdH2IWmB2ioZ+zkxtmq6g09fGQ=="],
  }
}
"
`;

exports[`Yarn Berry migration optional dependencies via dependenciesMeta 1`] = `
"{
  "lockfileVersion": 1,
  "workspaces": {
    "": {
      "name": "test-deps-meta",
      "dependencies": {
        "sharp": "^0.32.0",
      },
    },
  },
  "packages": {
    "@img/sharp-darwin-arm64": ["@img/sharp-darwin-arm64@0.32.6", "", { "os": "darwin", "cpu": "arm64" }, ""],

    "@img/sharp-linux-x64": ["@img/sharp-linux-x64@0.32.6", "", { "os": "linux", "cpu": "x64" }, ""],

    "sharp": ["sharp@0.32.6", "", { "dependencies": { "@img/sharp-darwin-arm64": "0.32.6", "@img/sharp-linux-x64": "0.32.6" }, "optionalDependencies": { "@img/sharp-darwin-arm64": "0.32.6", "@img/sharp-linux-x64": "0.32.6" } }, "sha512-KyLTWwgcR9Oe4d9HwCwNM2l7+J0dUQwn/yf7S0EnTtb0eVS4RxO0eUSvxPtzT4F3SY+C4K6fqdv/DO27sJ/v/w=="],
  }
}
"
`;

exports[`Yarn Berry migration bin definitions 1`] = `
"{
  "lockfileVersion": 1,
  "workspaces": {
    "": {
      "name": "test-bins",
      "dependencies": {
        "typescript": "^5.9.2",
      },
    },
  },
  "packages": {
    "typescript": ["typescript@5.9.2", "", { "bin": { "tsc": "bin/tsc", "tsserver": "bin/tsserver" } }, "sha512-CWBzXQrc/qOkhidw1OzBTQuYRbfyxDXJMVJ1XNwUHGROVmuaeiEm3OslpZ1RV96d7SKKjZKrSJu3+t/xlw3R9A=="],
  }
}
"
`;

exports[`Yarn Berry migration workspace:* protocol 1`] = `
"{
  "lockfileVersion": 1,
  "workspaces": {
    "": {
      "name": "test-workspaces",
      "dependencies": {
        "lib-a": "workspace:*",
      },
    },
    "packages/lib-a": {
      "name": "lib-a",
      "version": "1.0.0",
    },
  },
  "packages": {
    "lib-a": ["lib-a@workspace:packages/lib-a"],
  }
}
"
`;

exports[`Yarn Berry migration v6 format fallback with os/cpu arrays 1`] = `
"{
  "lockfileVersion": 1,
  "workspaces": {
    "": {
      "name": "test-v6",
      "dependencies": {
        "fsevents": "^2.3.2",
      },
    },
  },
  "packages": {
    "fsevents": ["fsevents@2.3.2", "", { "os": "darwin" }, "sha512-xiqMQR4xAeHTuB9uWm+fFRcIOgKBMiOBP+eXiyT7jsgVCq1bkVygt00oASowB7EdtpOHaaPgKt812P9ab+DDKA=="],
  }
}
"
`;

exports[`Yarn Berry migration deeply nested workspace dependencies with multiple conflicting versions 1`] = `
"{
  "lockfileVersion": 1,
  "workspaces": {
    "": {
      "name": "complex-deps-monorepo",
    },
    "packages/pkg-a": {
      "name": "pkg-a",
      "version": "1.0.0",
      "dependencies": {
        "lodash": "^4.17.20",
        "react": "^18.0.0",
      },
    },
    "packages/pkg-b": {
      "name": "pkg-b",
      "version": "1.0.0",
      "dependencies": {
        "lodash": "^4.17.21",
        "pkg-a": "workspace:^",
        "react": "^17.0.0",
      },
    },
    "packages/pkg-c": {
      "name": "pkg-c",
      "version": "1.0.0",
      "dependencies": {
        "pkg-a": "workspace:^",
        "pkg-b": "workspace:^",
        "react": "^18.2.0",
      },
    },
    "packages/pkg-d": {
      "name": "pkg-d",
      "version": "1.0.0",
      "dependencies": {
        "lodash": "^4.17.19",
        "pkg-c": "workspace:^",
        "react": "^16.14.0",
      },
    },
    "packages/pkg-e": {
      "name": "pkg-e",
      "version": "1.0.0",
      "dependencies": {
        "pkg-a": "workspace:^",
        "pkg-d": "workspace:^",
        "react": "^18.0.0",
      },
    },
  },
  "packages": {
    "js-tokens": ["js-tokens@4.0.0", "", {}, "sha512-RdJUflcE3cUzKiMqQgsCu06FPu9UdIJO0beYbPhHN4k6apgJtifcoCtT9bcxOpYBtpD2kCM6Sbzg4CausW/PKQ=="],

    "lodash": ["lodash@4.17.21", "", {}, "sha512-v2kDEe57lecTulaDIuNTPy3Ry4gLGJ6Z1O3vE1krgXZNrsQ+LFTGHVxVjcXPs17LhbZVGedAJv8XZ1tvj5FvSg=="],

    "loose-envify": ["loose-envify@1.4.0", "", { "dependencies": { "js-tokens": "^3.0.0 || ^4.0.0" }, "bin": { "loose-envify": "cli.js" } }, "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q=="],

    "object-assign": ["object-assign@4.1.1", "", {}, "sha512-rJgTQnkUnH1sFw8yT6VSU3zD3sWmu6sZhIseY8VX+GRu3P6F7Fu+JNDoXfklElbLJSnc3FUQHVe4cU5hj+BcUg=="],

    "pkg-a": ["pkg-a@workspace:packages/pkg-a"],

    "pkg-b": ["pkg-b@workspace:packages/pkg-b"],

    "pkg-c": ["pkg-c@workspace:packages/pkg-c"],

    "pkg-d": ["pkg-d@workspace:packages/pkg-d"],

    "pkg-e": ["pkg-e@workspace:packages/pkg-e"],

    "prop-types": ["prop-types@15.8.1", "", { "dependencies": { "loose-envify": "^1.4.0", "object-assign": "^4.1.1", "react-is": "^16.13.1" } }, "sha512-oj87CgZICdulUohogVAR7AjlC0327U4el4L6eAvOqCeudMDVU0NThNaV+b9Df4dXgSP1gXMTnPdhfe/2qDH5cg=="],

    "react": ["react@18.3.1", "", { "dependencies": { "loose-envify": "^1.1.0" } }, "sha512-wS+hAgJShR0KhEvPJArfuPVN1+Hz1t0Y6n5jLrGQbkb4urgPE/0Rve+1kMB1v/oWgHgm4WIcV+i7F2pTVj+2iQ=="],

    "react-is": ["react-is@16.13.1", "", {}, "sha512-24e6ynE2H+OKt4kqsOvNd8kBpV65zoxbA4BVsEOB3ARVWQki/DHzaUoC5KuON/BiccDaCCTZBuOcfZs70kR8bQ=="],

    "pkg-b/react": ["react@17.0.2", "", { "dependencies": { "loose-envify": "^1.1.0", "object-assign": "^4.1.1" } }, "sha512-gnhPt75i/dq/z3/6q/0asP78D0u592D5L1pd7M8P+dck6Fu/jJeL6iVVK23fptSUZj8Vjf++7wXA8UNclGQcbA=="],

    "pkg-d/react": ["react@16.14.0", "", { "dependencies": { "loose-envify": "^1.1.0", "object-assign": "^4.1.1", "prop-types": "^15.6.2" } }, "sha512-0X2CImDkJGApiAlcf0ODKIneSwBPhqJawOa5wCtKbu7ZECrmS26NvtSILynQ66cgkT/RJ4LidJOc3bUESwmU8g=="],
  }
}
"
`;
